fix spacing in mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -252,11 +252,11 @@ ul {
 
 // margin of text section from the top, higher perccent means lower
 .staticTop {
-  margin-top: 10%
+  margin-top: 10%;
 }
 // margin of text section from the top, higher perccent means lower
 .staticTopMobile {
-  margin-top: 1%
+  margin-top: 0;
 }
 
 
